# MamayScope

./: .env.example  .gitignore  README.md  pyproject.toml  steps.txt  url.txt  vllm-hook-requirements.txt
configs/: saelens_sae_trainer_full.yaml  saelens_sae_trainer_smoke.yaml  uk_political_corpus_keywords.yaml
docs/: hf_pipeline_cleanup_plan.md  neuron_labeling_pipeline_report.md  neuron_labeling_pipelines_current.md  scripts_usage_guide.md  training_notes.md
src/api/: main.py
src/api/schemas/: schemas.py
src/api/services/: mamay_client.py
src/core/: settings.py
src/pipelines/: base.py  neuron_labeling_pipeline.py  pipeline_executor.py  political_corpus_pipeline.py  sae_training_data_generator.py  saelens_sae_training_pipeline.py
src/pipelines/processors/: __init__.py  mamay_activation_processor.py  sae_feature_encode_processor.py
src/pipelines/sinks/: __init__.py  huggingface_hub_model_sink.py  jsonl_neuron_sink.py  model_file_sink.py  parquet_neuron_sink.py  parquet_sink.py
src/pipelines/sources/: __init__.py  cached_activations_config_source.py  (+3 more)
src/prompts/: system.py
src/schemas/: activations.py
src/scripts/: build_feature_label_browser.py  build_feature_occurrence_index_and_labeler.py  build_sae_vis_from_parquet.py  build_saelens_cached_activations_dataset.py  download_mamay_sae_dataset.py  push_cached_activations_to_hub.py  saelens_cached_activations_usage.md
src/services/: gemma_service.py  mamay_service.py  mock_mamay_service.py  model_service.py  openrouter_labeling_service.py
tests/: test_feature_label_quality.py
(+1 files in other folders)
