[project]
name = "scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "huggingface-hub>=0.36.2",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.2",
    "sae-lens>=6.37.6",
    "transformer-lens>=2.17.0",
]

[tool.uv.workspace]
members = [
    "vLLM-Hook",
]
